tests/baselines/reference/tsxElementResolution4.errors.txt
tests/cases/conformance/jsx/file.tsx(16,7): error TS2322: Type '{ q: ""; }' is not assignable to type '{ m: string; }'.
  Property 'm' is missing in type '{ q: ""; }'.


==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    	    div: { n: string; };
    	    span: { m: string; };
    	}
    }
    
    // OK
    <div n='x' />;
    
    // OK
    <span m='ok' />;
    
    // Error
    <span q='' />;
          ~~~~
!!! error TS2322: Type '{ q: ""; }' is not assignable to type '{ m: string; }'.
!!! error TS2322:   Property 'm' is missing in type '{ q: ""; }'.
    